TELEOP added a preliminar part of Simulation

--- a/TELEOPERATION/reportTeleop/edoardo.tex
+++ b/TELEOPERATION/reportTeleop/edoardo.tex
@@ -1,3 +1,24 @@
 \section{Simulations}
+In regards of the simulation scenarios we are deliberately neglecting the
+critical aspects of the communication between master and slave, therefore
+assuming ideal conditions as an istantaneous and loss-less signal trasfer,
+without noise.
+The table in fig(...) describes the parameters chosen such as inertiae and
+cut-off frequencies in addition to the range of values that the virtual
+coefficients have undertaken.
+% table
+As shows the bode diagram in fig(...) different sets of virtual parameters
+brings to different slope profile that will be more or less suited to reject the
+disturbances.
+% bode 
+From the upper scheme is clear how the virtual sets will suppress signals at
+frequencies higher than $10^3$ Htz with better results than in a rigid
+configuration where the aim is to reach full transparency betwwen master and
+slave.
+This frquancy domain analisys can be validated by the amplitude of the noise
+waves shown in fig(...).
+????? which is better ???
+
+
 
 \section{Results}
