Some changes in quadrotor and teleoperation report

--- a/QUADROTOR_FAILURE/report/Report.tex
+++ b/QUADROTOR_FAILURE/report/Report.tex
@@ -808,7 +808,7 @@ In this case the vehicle follows the vertical trajectory (fig.\ref{fig:positions
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{Images/Forces_SetPoint}
-	\caption{Forces required by the double-loop architecture (force saturation active) - only the first 5 seconds.}
+	\caption{Forces required by the double-loop architecture (force saturation active).}
 	\label{fig:forcessetpoint}
 \end{figure}
 
