TELEOP   fixed images relative filesystem path of  presentation, QUADROTOR   added a shared template for a presentation

--- a/TELEOPERATION/Presentation/Presentation.tex
+++ b/TELEOPERATION/Presentation/Presentation.tex
@@ -58,7 +58,7 @@ value of virtual elements (based on the cut-off frequencies and stiffness of the
 	
 	\begin{figure}[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{../../../../QuadrotorModelling/TELEOPERATION/reportTeleop/Images/spring_damper_inertia_system}
+	\includegraphics[width=0.8\linewidth]{../reportTeleop/Images/spring_damper_inertia_system}
 	\end{figure}
 
 Position error based torque reflection to the operator at the
@@ -76,7 +76,7 @@ master side.
 
 	\begin{figure}
 	\centering
-	\includegraphics[width=0.8\linewidth]{../../../../QuadrotorModelling/TELEOPERATION/reportTeleop/Images/Block_diagram}
+	\includegraphics[width=0.8\linewidth]{../reportTeleop/Images/Block_diagram}
 	\end{figure}
 
 Dynamics equations in frequency domain:
