TELEOP minimal change to presentation , updated gitignore to ignore latex related files

--- a/TELEOPERATION/Presentation/Presentation.tex
+++ b/TELEOPERATION/Presentation/Presentation.tex
@@ -194,23 +194,22 @@ and
 
 \end{frame}	
 
-\begin{frame}{Vibration Suppression Performance Analysis}
-	
-	
-	
-\end{frame}	
 
-\section{Results}
+% \begin{frame}{}
+% \end{frame}	
 
-\begin{frame}{Simulation Setup}
+\section{Simulations}
+\subsection{Vibration Suppression Performance Analysis}
+
+\begin{frame}{}
 
 \end{frame}
 
-\begin{frame}{Simulation Scenario and Results}
+\begin{frame}{}
 	
 \end{frame}
 
-\begin{frame}{Simulation Scenario and Results}
+\begin{frame}{}
 	
 	VIDEO
 	
